--- a/articles/cost-management/index.yml
+++ b/articles/cost-management/index.yml
@@ -36,3 +36,4 @@ sections:
         items:
           - html: <a href="tutorial-review-usage">Granska användning och kostnader för att identifiera avvikelser och effektivitet</a>
           - html: <a href="tutorial-user-access">Tilldela åtkomst till Cost Management-data</a>
+          - html: <a href="tutorial-forecast-spending">Prognostisera framtida utgifter</a>
