--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -24,7 +24,7 @@ sections:
         style: icon48
         items:
           - image:
-              src: /azure/app-service-api/media/index/cli.svg
+              src: /azure/event-grid/media/index/cli.svg
             text: Azure CLI
             href: /azure/event-grid/custom-event-quickstart
   - title: Steg för steg-självstudier
@@ -35,6 +35,7 @@ sections:
         style: ordered
         items:
           - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Övervaka händelser i virtuella datorer med logiska appar</a>
+          - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Ändra storlek på överförda bilder</a>
   - title: Referens
     items:
       - type: list
@@ -42,7 +43,7 @@ sections:
         className: cardsD
         items:
           - title: Kommandorad
-            html: <p><a href="/cli/azure/eventgrid">Azure CLI</a></p>
+            html: <p><a href="/cli/azure/eventgrid">Azure CLI</a></p><p><a href="/powershell/module/azurerm.eventgrid">PowerShell</a></p>
           - title: 'REST API:er'
             html: <p><a href="/rest/api/eventgrid">REST</a></p>
           - title: Scheman
