--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -145,7 +145,7 @@
           href: prepare-for-upload-vhd-image.md
         - name: Använda generaliserad avbildning
           href: create-vm-generalized-managed.md
-        - name: Använda specialiserad avbildning
+        - name: Använda specialiserad disk
           href: create-vm-specialized.md
         - name: Spela in den virtuella datorn till avbildning
           href: capture-image-resource.md
