--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -117,8 +117,6 @@
               href: app-insights-snapshot-debugger.md
         - name: J2EE
           items:
-            - name: Eclipse
-              href: app-insights-java-eclipse.md
             - name: Loggspårningar
               href: app-insights-java-trace-logs.md
             - name: Unix-mått
@@ -140,8 +138,6 @@
               href: app-insights-proactive-failure-diagnostics.md
             - name: Prestandaavvikelser
               href: app-insights-proactive-performance-diagnostics.md
-        - name: Dynamics CRM
-          href: app-insights-sample-mscrm.md
         - name: Skapa en resurs
           href: app-insights-create-new-resource.md
     - name: Analysera
@@ -188,14 +184,8 @@
           items:
             - name: Översikt
               href: app-insights-analytics.md
-            - name: Guidad visning
-              href: app-insights-analytics-tour.md
-            - name: Använda
-              href: app-insights-analytics-using.md
-            - name: Importera
+            - name: Importera anpassade loggar
               href: app-insights-analytics-import.md
-            - name: Diagnostik
-              href: app-insights-analytics-diagnostics.md
     - name: Automatisera
       items:
         - name: Azure PowerShell-konfiguration
@@ -259,7 +249,7 @@
           href: app-insights-java-troubleshoot.md
 - name: Referens
   items:
-    - name: Analys
+    - name: Analytics-frågespråk
       href: 'https://docs.loganalytics.io/'
     - name: .NET
       href: 'https://docs.microsoft.com/dotnet/api/microsoft.applicationinsights'
