--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -15,6 +15,8 @@
       href: functions-create-first-azure-function-azure-cli.md
     - name: Skapa funktion – Visual Studio
       href: functions-create-your-first-function-visual-studio.md
+    - name: Skapa funktion – Java/Maven
+      href: functions-create-first-java-maven.md
     - name: Utlösare
       items:
         - name: Blob Storage
@@ -67,12 +69,46 @@
           href: functions-reference-fsharp.md
         - name: JavaScript
           href: functions-reference-node.md
+        - name: Java
+          href: functions-reference-java.md
     - name: Saker att tänka på gällande prestanda
       href: functions-best-practices.md
     - name: Functions-proxyservrar
       href: functions-proxies.md
     - name: Functions-körning
       href: functions-runtime-overview.md
+    - name: Pålitliga funktioner
+      items:
+        - name: Översikt
+          href: durable-functions-overview.md
+        - name: Bindningar
+          href: durable-functions-bindings.md
+        - name: Kontrollpunkt och återuppspelning
+          href: durable-functions-checkpointing-and-replay.md
+        - name: Instanshantering
+          href: durable-functions-instance-management.md
+        - name: HTTP-API
+          href: durable-functions-http-api.md
+        - name: Felhantering
+          href: durable-functions-error-handling.md
+        - name: Diagnostik
+          href: durable-functions-diagnostics.md
+        - name: Timers
+          href: durable-functions-timers.md
+        - name: Externa händelser
+          href: durable-functions-external-events.md
+        - name: Eternal-orkestreringar
+          href: durable-functions-eternal-orchestrations.md
+        - name: Singleton-orkestreringar
+          href: durable-functions-singletons.md
+        - name: Sub-orkestreringar
+          href: durable-functions-sub-orchestrations.md
+        - name: Uppgiftshubbar
+          href: durable-functions-task-hubs.md
+        - name: Versionshantering
+          href: durable-functions-versioning.md
+        - name: Prestanda och skalning
+          href: durable-functions-perf-and-scale.md
 - name: Instruktionsguider
   items:
     - name: Utveckla
@@ -94,7 +130,11 @@
         - name: Lokala funktioner
           href: functions-runtime-install.md
     - name: Konfigurera
-      href: functions-how-to-use-azure-function-app-settings.md
+      items:
+        - name: Hantera en funktionsapp
+          href: functions-how-to-use-azure-function-app-settings.md
+        - name: Ange körningsversion
+          href: functions-versions.md
     - name: Övervaka
       href: functions-monitoring.md
     - name: Integrera
@@ -111,6 +151,18 @@
           href: functions-flow-scenario.md
         - name: Använd en hanterad tjänstidentitet
           href: ../app-service/app-service-managed-service-identity.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: Bestående funktioner
+      items:
+        - name: Installera
+          href: durable-functions-install.md
+        - name: Länkning
+          href: durable-functions-sequence.md
+        - name: Förgrening
+          href: durable-functions-cloud-backup.md
+        - name: Tillståndskänslig singleton
+          href: durable-functions-counter.md
+        - name: Mänsklig interaktion
+          href: durable-functions-phone-verification.md
 - name: Referens
   items:
     - name: Bindningar
