--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -32,6 +32,10 @@
           href: storage-sync-files-planning.md
         - name: Så här distribuerar du Azure File Sync
           href: storage-sync-files-deployment-guide.md
+        - name: Om ögonblicksbilder av filresurser
+          href: storage-snapshots-files.md
+        - name: Så här arbetar du med ögonblicksbilder av filresurser
+          href: storage-how-to-use-files-snapshots.md
         - name: Replikering
           href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Mål för skalbarhet och prestanda
@@ -128,14 +132,18 @@
       href: /cli/azure/storage
     - name: .NET
       items:
-        - name: Resource Manager
-          href: /dotnet/api/microsoft.azure.management.storage
-        - name: Dataförflyttning
-          href: /dotnet/api/microsoft.windowsazure.storage.datamovement
         - name: 'Blobar, köer, tabeller och filer'
-          href: 'https://docs.microsoft.com/en-us/dotnet/api/overview/azure/storage?view=azure-dotnet'
+          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/client?view=azure-dotnet'
+        - name: Dataförflyttning
+          href: 'https://docs.microsoft.com/dotnet/api/microsoft.windowsazure.storage.datamovement?view=azure-dotnet'
+        - name: Resource Manager
+          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/management?view=azure-dotnet'
     - name: Java
-      href: 'http://azure.github.io/azure-storage-java/'
+      items:
+        - name: 'Blobar, köer, tabeller och filer'
+          href: 'https://docs.microsoft.com/java/api/overview/azure/storage/clientlibrary'
+        - name: Resource Manager
+          href: 'https://docs.microsoft.com/java/api/overview/azure/storage/managementapi'
     - name: Node.js
       href: 'http://azure.github.io/azure-storage-node'
     - name: Ruby
