--- a/articles/log-analytics/index.yml
+++ b/articles/log-analytics/index.yml
@@ -27,6 +27,10 @@ sections:
               src: 'https://docs.microsoft.com/en-us/azure/media/index/virtualmachine.svg'
             text: Virtuella Azure-datorer
             href: /azure/log-analytics/log-analytics-quick-collect-azurevm
+          - image:
+              src: 'https://docs.microsoft.com/en-us/azure/media/index/virtualmachine.svg'
+            text: Linux-dator
+            href: /azure/log-analytics/log-analytics-quick-collect-linux-computer
   - title: Stegvisa självstudier
     items:
       - type: paragraph
