--- a/articles/service-fabric/index.yml
+++ b/articles/service-fabric/index.yml
@@ -45,8 +45,8 @@ sections:
         style: ordered
         items:
           - html: <a href="service-fabric-tutorial-create-dotnet-app">Distribuera ett .NET-program</a>
-          - html: <a href="service-fabric-tutorial-create-cluster-azure-ps">Lift and shift-hantera ett befintligt .NET-program</a>
-          - html: <a href="service-fabric-tutorial-create-container-images">Skapa en app för Linux-behållare</a>
+          - html: <a href="service-fabric-tutorial-create-cluster-azure-ps">Använd ett befintligt .NET-program i behållare</a>
+          - html: <a href="service-fabric-tutorial-create-container-images">Skapa ett program för Linux-behållare</a>
           - html: Skapa och hantera ett <a href="service-fabric-tutorial-create-vnet-and-windows-cluster">Windows-</a> eller <a href="service-fabric-tutorial-create-vnet-and-linux-cluster">Linux</a>-kluster
   - title: Kostnadsfri videoutbildning för Pluralsight
     items:
