--- a/articles/application-insights/index.yml
+++ b/articles/application-insights/index.yml
@@ -39,6 +39,10 @@ sections:
               src: 'https://docs.microsoft.com/media/common/java.svg'
             text: Java
             href: app-insights-java-quick-start
+          - image:
+              src: /azure/application-insights/media/index/mobile-center.png
+            text: Mobil
+            href: app-insights-mobile-center-quickstart
   - title: Stegvisa självstudier
     items:
       - type: paragraph
