--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -17,6 +17,8 @@
       href: app-insights-nodejs-quick-start.md
     - name: Java
       href: app-insights-java-quick-start.md
+    - name: Mobil
+      href: app-insights-mobile-center-quickstart.md
 - name: Självstudier
   items:
     - name: Hitta körningsundantag
@@ -92,7 +94,7 @@
             - name: Profilerare
               href: app-insights-profiler.md
             - name: Aktivera Profiler
-              href: enable-profiler-cloud-services.md
+              href: enable-profiler-compute.md
             - name: Diagnostik
               href: app-insights-azure-diagnostics.md
             - name: Förhandsgranskningar
