--- a/articles/log-analytics/index.yml
+++ b/articles/log-analytics/index.yml
@@ -28,9 +28,13 @@ sections:
             text: Virtuella Azure-datorer
             href: /azure/log-analytics/log-analytics-quick-collect-azurevm
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/media/index/virtualmachine.svg'
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
             text: Linux-dator
             href: /azure/log-analytics/log-analytics-quick-collect-linux-computer
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            text: Windows-dator
+            href: /azure/log-analytics/log-analytics-quick-collect-windows-computer
   - title: Stegvisa självstudier
     items:
       - type: paragraph
