--- a/articles/containers/index.yml
+++ b/articles/containers/index.yml
@@ -47,10 +47,10 @@ sections:
         className: cardsM
         columns: 2
         items:
-          - href: 'https://docs.microsoft.com/azure/container-instances/container-instances-quickstart'
-            title: Skapa en behållarbaserad app med Azure Container Instances
+          - href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-quickstart-containers'
+            title: Distribuera ett Windows-behållarprogram med Service Fabric
             image:
-              src: /azure/media/index/ContainerService.svg
+              src: /azure/media/index/Fabric.svg
           - href: 'https://docs.microsoft.com/azure/container-service/kubernetes/container-service-kubernetes-walkthrough'
             title: Skapa ett Kubernetes-kluster för Linux-behållare
             image:
@@ -59,12 +59,16 @@ sections:
             title: Distribuera ett Docker Swarm-kluster
             image:
               src: 'https://docs.microsoft.com/media/logos/logo_docker.svg'
-          - href: 'https://docs.microsoft.com/azure/container-service/dcos-swarm/container-service-dcos-quickstart'
-            title: Distribuera ett DC/OS-kluster
+          - href: 'https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli'
+            title: Skapa ett privat Docker-register i Azure Container Registry
             image:
-              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+              src: /azure/media/index/container-registry.svg
           - href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-custom-docker-image'
             title: Skapa en behållarbaserad app med Azure Web Apps for Containers
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+          - href: 'https://docs.microsoft.com/azure/container-service/dcos-swarm/container-service-dcos-quickstart'
+            title: Distribuera ett DC/OS-kluster
             image:
               src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
   - title: Kostnadsfri videoutbildning för Pluralsight för Azure och behållare
