--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -53,6 +53,8 @@
           href: concepts-extensions.md
         - name: Serverloggar
           href: concepts-server-logs.md
+        - name: Hög tillgänglighet
+          href: concepts-high-availability.md
     - name: Resurser
       items:
         - name: Prisnivåer
@@ -67,6 +69,8 @@
           href: concepts-firewall-rules.md
         - name: Konfigurera SSL
           href: concepts-ssl-connection-security.md
+    - name: Övervaka
+      href: concepts-monitoring.md
     - name: Utveckling
       items:
         - name: Anslutningsbibliotek
@@ -91,14 +95,20 @@
           href: howto-migrate-using-dump-and-restore.md
         - name: Importera och exportera
           href: howto-migrate-using-export-and-import.md
-    - name: Anpassa konfigurationsparametrar för server
+    - name: Konfigurera serverparametrar
       items:
         - name: Azure CLI
           href: howto-configure-server-parameters-using-cli.md
-    - name: Serverloggar
+    - name: Åtkomst till serverloggar
       items:
+        - name: Azure Portal
+          href: howto-configure-server-logs-in-portal.md
         - name: Azure CLI
           href: howto-configure-server-logs-using-cli.md
+    - name: Övervaka
+      items:
+        - name: Skapa aviseringar för mått
+          href: howto-alert-on-metric.md
 - name: Referens
   items:
     - name: Azure CLI
